@@ -37,6 +37,12 @@ public abstract class AbstractJRubyMojo extends AbstractMojo {
     protected File launchDirectory;
 
     /**
+     * @parameter expression="${cucumber.gemDirectory}"
+     * @required
+     */
+    protected File gemDirectory;
+
+    /**
      * The project compile classpath.
      *
      * @parameter default-value="${project.compileClasspathElements}"
@@ -91,6 +97,9 @@ public abstract class AbstractJRubyMojo extends AbstractMojo {
      */
     protected void installGem(String gemArgs) throws MojoExecutionException {
         GemTask gem = new GemTask();
+        if (gemDirectory != null && gemDirectory.exists()) {
+            gem.setDir(gemDirectory);
+        }
         gem.setProject(getProject());
         gem.setArgs(gemArgs);
         gem.execute();
